# ShapeLooker

./: .gitignore  CMakeLists.txt  circle.cpp  circle.h  cylinder.cpp  cylinder.h  dialog.cpp  dialog.h  dialog.ui  drawableItem.h  drawingboard.cpp  drawingboard.h  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pen.cpp  pen.h  rect.cpp  rect.h  shapelookergraphicsview.cpp  shapelookergraphicsview.h  styles.qrc  styles.qss
styles/: style.qss
